style: increase row width to avoid horizontal scrolling
Fixes #13

--- a/app/www/assets/css/styles.css
+++ b/app/www/assets/css/styles.css
@@ -13,7 +13,7 @@ b {
 }
 
 .row {
-    max-width: 80rem;
+    max-width: 90rem;
 }
 
 /* Hack to hide the empty section when not needed */
